auto-test/tests/chapter_13/invalid_types/extra_credit/compound_right_bitshift.c
int main(void) {
    
    int i = 1000;
    i >>= 2.0;
    return i;
}